updated html to TimeSink title

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>TimeSink</h1>
+
+<DOCTYPE! html>
+
+<html> <lang="en" dir="ltr">
+
+<head>
+  <title>TimeSink</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="app.css">
+</head>
+  <body>
+    <section>
+      <h1>TimeSink</h1>
+      <p>TimeSink is a new cinema platform</p>
+      <p>Site launching sometime in 2020</p>
+    </section>
+  </body>
+
+  </html>
