--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
   <body>
     <section>
-      <h1>TimeSink</h1>
-      <p>TimeSink is a new cinema platform</p>
-      <p>Site launching sometime in 2020</p>
+      <h1><img src="img/TimeSink®.svg"</h1>
+      <p>TimeSink is a cinema and multimedia platform dedicated to establishing new traditions.</p>
+      <p>We present films from current talent and help audiences discover them.  </p>
+      <p>Site launching sometime in 2020.</p>
     </section>
   </body>
 
