added styling // change to site launch date copy

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1><img src="img/TimeSink®.svg"</h1>
       <p>TimeSink is a cinema and multimedia platform dedicated to establishing new traditions.</p>
       <p>We present films from current talent and help audiences discover them.  </p>
-      <p>Site launching sometime in 2020.</p>
+      <p> // Site launching sometime in 2020 //</p>
     </section>
   </body>
 
